2013-02-20  Peter Bloomfield

	* libbalsa/libbalsa-gpgme.c (libbalsa_gpgme_init): use g_message
	instead of g_warning.

2013-02-20  Peter Bloomfield

	* configure.in: new option --enable-debug-threads.
	* libbalsa/libbalsa.h: use it to define gdk_threads_enter() to
	detect a sub-thread.

2013-02-20  Peter Bloomfield

	Build with enable-threads; check POP3 mail and send messages in
	threads.

	* libbalsa/libbalsa.c (libbalsa_lock_mailbox),
	(libbalsa_threads_init), (libbalsa_threads_has_lock): rip out
	gdk_threads-related code.
	* libbalsa/libbalsa.h: ditto.
	* src/main.c (threads_init): ditto.
	* libbalsa/imap-server.c (connection_cleanup): not ready for
	threads.
	* libbalsa/mailbox.c (libbalsa_mailbox_class_init),
	(lbm_get_index_entry), (lbm_check_idle): ditto.
	* libbalsa/mailbox_local.c (lbm_local_save_tree_idle): ditto
	* libbalsa/mailbox_pop3.c: use a thread.
	* libbalsa/mailbox_pop3.h: ditto.
	* libbalsa/send.c (lbs_process_queue), (libbalsa_process_queue):
	* src/main-window.c: ditto.

2013-02-16  Peter Bloomfield

	* libbalsa/libbalsa-conf.c (lbc_lock), (lbc_unlock): call
	lbc_init() only once.

2013-01-15  Peter Bloomfield

	* src/main-window.c: emit signal instead of calling NULL class
	method.

2013-01-08  Peter Bloomfield

	* src/pref-manager.c (create_layout_types_menu): use relevant
	enum.

2013-01-08  Peter Bloomfield

	* src/main-window.c: mailbox index cannot shrink.

2012-12-08  Peter Bloomfield

	* src/main-window.c: use idle callback to check mail when not
	threaded.

2012-11-27  Peter Bloomfield

	* src/balsa-index.c (balsa_index_scroll_on_open): use idle
	callback only from a subthread.

2012-11-21  Peter Bloomfield

	Build with gtk 3.6, at least without threads

	* libbalsa/information.c: include libbalsa.h.
	* libbalsa/libbalsa.h: when not threaded, define
	gdk_threads_{enter,leave} to nothing.
	* libbalsa/mailbox.c (lbm_cache_message): when not threaded,
	avoid recursive signal call.
	* libbalsa/misc.c: remove deprecated GtkTable code.